<resources>
    <string name="app_name">Renew Survey</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Project">Project<font color='#EA0C27'>*</font></string>
    <string name="name">Name of the Employee<font color='#EA0C27'>*</font></string>
    <string name="dob">Date of Birth (DD-MM-YYYY)<font color='#EA0C27'>*</font></string>
    <string name="gender">12. Gender<font color='#EA0C27'>*</font></string>
    <string name="phone">Worker Phone Number<font color='#EA0C27'>*</font></string>
    <string name="emergency_contact">Emergency Contact Number<font color='#EA0C27'>*</font></string>
    <string name="emergency_name">Emergency Contact Name<font color='#EA0C27'>*</font></string>
    <string name="address">Address<font color='#EA0C27'>*</font></string>
    <string-array name="state">
        <item>Select State</item>
    </string-array>
    <string name="allowed_for_data">2. Did the Met Person Allowed for Data? <font color='#EA0C27'>*</font></string>
    <string name="aadhar_card">6. Do you have Aadhar Card?<font color='#EA0C27'>*</font></string>
    <string name="locatioon">District<font color='#EA0C27'>*</font></string>
    <string name="skill_type">Skill Type<font color='#EA0C27'>*</font></string>
    <string name="skill_set">Skill Set<font color='#EA0C27'>*</font></string>
    <string name="doj">DOJ<font color='#EA0C27'>*</font></string>
    <string name="supervisor">Supervisor Name(Renew)<font color='#EA0C27'>*</font></string>
    <string name="contractor">Sub Contractor/ Firm Name<font color='#EA0C27'>*</font></string>
    <string name="contractor_num">Contractor Contact Number<font color='#EA0C27'>*</font></string>
    <string name="status">Status<font color='#EA0C27'>*</font></string>
    <string name="if_you_reject_this_permission" translatable="false">Please allow all permissions to proceed</string>
    <string name="driving">Driving licence no<font color='#EA0C27'>*</font></string>
    <string name="induction_state">Induction Status<font color='#EA0C27'>*</font></string>
    <string name="aadhar">6.1. Aadhaar Card<font color='#EA0C27'>*</font></string>
    <string name="aadhar_front">6.2. Capture Front Photo Of Aadhar Card<font color='#EA0C27'>*</font></string>
    <string name="aadhar_back">6.3. Capture Back Photo Of Aadhar Card<font color='#EA0C27'>*</font></string>
    <string name="medical_states">Medical test status<font color='#EA0C27'>*</font></string>
    <string name="report">Medical Report is Ok<font color='#EA0C27'>*</font></string>
    <string name="induction_date">Induction date<font color='#EA0C27'>*</font></string>
    <string name="medical_date">Date Of Medical Test<font color='#EA0C27'>*</font></string>
    <string name="aadhar_image">Upload Aadhaar Card<font color='#EA0C27'>*</font></string>
    <string name="medical_certificate">Medical Certificate <font color='#EA0C27'>*</font></string>
    <string name="medical_cert">Upload Medical Certificate<font color='#EA0C27'>*</font></string>
    <string name="driving_cert">Upload Driving Liceence<font color='#EA0C27'>*</font></string>
    <string name="nationality">Nationality<font color='#EA0C27'>*</font></string>
    <string name="date_and_time_of_visit">1. Date and Time of visit<font color='#EA0C27'>*</font></string>
    <string name="gps_location">3. GPS Location<font color='#EA0C27'>*</font></string>
    <string name="beneficiary_name">4. Beneficiary Name<font color='#EA0C27'>*</font></string>
    <string name="family_size">13. Family size<font color='#EA0C27'>*</font></string>
    <string name="lpg_using">14. LPG using<font color='#EA0C27'>*</font></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_of_cylinder_per_year">14.1. No of cylinder per year<font color='#EA0C27'>*</font></string>
    <string name="cost_of_cylinder">14.2. Cost of LPG cylinder?<font color='#EA0C27'>*</font></string>
    <string name="no_of_cow_dung_per_day">12. No Of Cow Dung Per Day<font color='#EA0C27'>*</font></string>
    <string name="cow_dung_cake_using">11. Cow dung cake using?<font color='#EA0C27'>*</font></string>
    <string name="annual_family_income">16. Annual Family Income<font color='#EA0C27'>*</font></string>
    <string name="house_type">15. House type<font color='#EA0C27'>*</font></string>
    <string name="willing_to_contribute_to_clean_cooking_device">17. Willing to contribute to clean cooking device?<font color='#EA0C27'>*</font></string>
    <string name="wood_used_per_day_in_kg">16. Wood Used Per Day In KG<font color='#EA0C27'>*</font></string>
    <string name="electricity_connection_available">18. Electricity connection available<font color='#EA0C27'>*</font></string>
    <string name="total_electricity_bill">18.1.Total Electricity Bill<font color='#EA0C27'>*</font></string>
    <string name="frequancy_of_electricity_bill">18.2.Frequency of bill payment<font color='#EA0C27'>*</font></string>
    <string name="e_bill_photo">18.3. If bill available than capture photo<font color='#EA0C27'>*</font></string>
    <string name="gps_location_nbs">2. GPS Location<font color='#EA0C27'>*</font></string>
    <string name="no_of_cattle_own">19. No of cattle own<font color='#EA0C27'>*</font></string>
    <string name="mobile_number">5. Mobile number<font color='#EA0C27'>*</font></string>
    <string-array name="district">
        <item>Select District</item>
    </string-array>
    <string-array name="tehsil">
        <item>Select Tehsil</item>
    </string-array>
    <string-array name="panchayath">
        <item>Select Panchayath</item>
    </string-array>
    <string-array name="village">
        <item>Select Village</item>
    </string-array>
    <string name="own">Owned</string>
    <string name="rented">Rented</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string-array name="frequancy">
        <item>Once/Month</item>
        <item>Once/2Month</item>
        <item>Once/3Month</item>
        <item>Once/4Month</item>
        <item>Annualy</item>
    </string-array>
    <string name="basic_info">Basic Information</string>
    <string name="attach_file">Attach file</string>
    <string name="capture_image">Capture Image</string>
    <string name="select">Select</string>
    <string name="retry">Retry</string>
    <string name="test_failed_n_your_obtained_marks">Test Failed, \n Your obtained Marks :</string>
    <string name="above_15_year_family_members">13.1 Above 15 Year Family Members<font color='#EA0C27'>*</font></string>
    <string name="below_15_year_family_members">13.2 Below 15 Year Family Members<font color='#EA0C27'>*</font></string>
    <string name="aadhar_or_ration">20. Do you have either Aadhar Or Ration Card?<font color='#EA0C27'>*</font></string>
    <string name="farmland_is_owned_by_benficary">21. Farmland is owned by beneficiary and farmland is adjacent/close (less than 50 meter) to house?<font color='#EA0C27'>*</font></string>
    <string name="if_5m_area_is_available_near_by">22. If 5 m2 area is available nearby to kitchen for setting Bio-gas digestor unit?<font color='#EA0C27'>*</font></string>
    <string name="device_Serial_number">23. Device Serial number<font color='#EA0C27'>*</font></string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Unique_farmer_id">1. Unique Farmer ID<font color='#EA0C27'>*</font></string>
    <string name="date_and_time_of_visit_nbs">2. Date and Time of visit<font color='#EA0C27'>*</font></string>
    <string name="father_name">4. Farmer Name<font color='#EA0C27'>*</font></string>
    <string name="id_proof">5. Aadhar number or identity proof<font color='#EA0C27'>*</font></string>
    <string name="mobilenumber">6. Mobile Number<font color='#EA0C27'>*</font></string>
    <string name="alt_mob_no">7. Alternate mobile number<font color='#EA0C27'>*</font></string>
    <string name="resaddress">8. Residential Address<font color='#EA0C27'>*</font></string>
    <string name="statename">9. State Name<font color='#EA0C27'>*</font></string>
    <string name="districtname">10. District Name<font color='#EA0C27'>*</font></string>
    <string name="tehsilname">11. Tehsil Name<font color='#EA0C27'>*</font></string>
    <string name="panchayatname">12. Panchayat Name<font color='#EA0C27'>*</font></string>
    <string name="villagename">13. Village Name<font color='#EA0C27'>*</font></string>
</resources>