<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".views.fragments.CommonQuestionFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_15_dp"
            android:paddingEnd="@dimen/margin_15_dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edt_beneficiary_name"
                android:hint="@string/beneficiary_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginTop="@dimen/dp_10"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/sp_state"
                    android:entries="@array/state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/sp_district"
                    android:entries="@array/district"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/sp_tehsil"
                    android:entries="@array/tehsil"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/sp_panchayat"
                    android:entries="@array/panchayath"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15_dp"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/sp_village"
                    android:entries="@array/village"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
            <TextView
                android:text="@string/gender"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:text="Male"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:text="Female"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_other"
                    android:text="Other"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_family_size"
                android:inputType="number"
                android:hint="@string/family_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <TextView
                android:text="@string/lpg_using"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_lpg_yes"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_lpg_no"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_no_cylinder_year"
                android:inputType="number"
                android:hint="@string/no_of_cylinder_per_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <TextView
                android:text="@string/cow_dung_cake_using"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_cow_dung_yes"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_cow_dung_no"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_no_cow_dung_per_day"
                android:inputType="number"
                android:hint="@string/no_of_cow_dung_per_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <TextView
                android:text="@string/house_type"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_own"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_rented"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_annual_family_income"
                android:inputType="number"
                android:hint="@string/annual_family_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <TextView
                android:text="@string/willing_to_contribute_to_clean_cooking_device"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_clean_yes"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_clean_no"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_wood_used"
                android:inputType="number"
                android:hint="@string/wood_used_per_day_in_kg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <TextView
                android:text="@string/electricity_connection_available"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_electricity_yes"
                    android:text="@string/yes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rb_electricity_no"
                    android:text="@string/no"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edt_cattle_own"
                android:inputType="number"
                android:hint="@string/no_of_cattle_own"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_mobile"
                android:inputType="number"
                android:hint="@string/mobile_number"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_aadhaar_card"
                android:inputType="number"
                android:hint="@string/aadhar"
                android:maxLength="12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>