<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.fragments.CommonQuestionFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_15_dp"
            android:paddingEnd="@dimen/margin_15_dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/Unique_farmer_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_Unique_farmer_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/spinner_background" />

            <TextView
                android:text="@string/date_and_time_of_visit_nbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:editable="false"
                android:cursorVisible="false"
                android:background="@drawable/spinner_background"
                />

            <TextView
                android:text="@string/gps_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_gps_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:focusable="false"
                android:background="@drawable/spinner_background" />

            <TextView
                android:text="@string/father_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"/>
            <EditText
                android:id="@+id/edt_farmer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:background="@drawable/spinner_background" />

            <LinearLayout
                android:id="@+id/ll_data_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/id_proof"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <EditText
                    android:id="@+id/edt_id_proof"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:background="@drawable/spinner_background" />

                <TextView
                    android:text="@string/mobilenumber"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt_mobile"
                    android:inputType="number"
                    android:background="@drawable/spinner_background"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/alt_mob_no"
                    android:text="@string/alt_mob_no"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt_alt_mob_no"
                    android:inputType="number"
                    android:background="@drawable/spinner_background"
                    android:maxLength="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/resaddress"
                    android:text="@string/resaddress"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edt_resaddress"
                    android:background="@drawable/spinner_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background">
                    <Spinner
                        android:id="@+id/sp_state"
                        android:entries="@array/state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
                <TextView
                    android:text="@string/district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background">
                    <Spinner
                        android:id="@+id/sp_district"
                        android:entries="@array/district"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
                <TextView
                    android:text="@string/tehsil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background">
                    <Spinner
                        android:id="@+id/sp_tehsil"
                        android:entries="@array/tehsil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <TextView
                    android:text="@string/panchayath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background">
                    <Spinner
                        android:id="@+id/sp_panchayat"
                        android:entries="@array/panchayath"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>
                <TextView
                    android:text="@string/village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/spinner_background">
                    <Spinner
                        android:id="@+id/sp_village"
                        android:entries="@array/village"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/margin_100dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>